--- a/giangvien.html
+++ b/giangvien.html
@@ -5,8 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<title>Trung tâm trợ giúp - ITShop.VN</title>
-	
+	<title>Giảng Viên - ITShop.VN</title>
 </head>
 
 <body>
@@ -14,11 +13,11 @@
 		<div id="navbar"></div>
 		
 		<div class="card mt-3">
-			<div class="card-header">Trang chủ</div>
+			<div class="card-header">Giảng viên</div>
 			<div class="card-body">
-				<p class="card-text">Trung tâm trợ giúp người dùng phần mềm <strong>Quản lý bán hàng</strong> của công ty <strong>ITShop.VN</strong>.</p>
-				
-	</div>
+				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Giảng viên</strong>.</p>
+				<img src="images/giangvien.png" class="img-fluid mx-auto d-block" />
+			</div>
 		</div>
 		
 		<div id="footer"></div>
