--- a/home.html
+++ b/home.html
@@ -6,6 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 	<title>Màn hình chính - ITShop.VN</title>
+	<style type ="text/css">
+		
+	</style>
 </head>
 
 <body>
@@ -16,7 +19,10 @@
 			<div class="card-header">Màn hình chính</div>
 			<div class="card-body">
 				<p class="card-text">Hướng dẫn sử dụng <strong>Màn hình chính</strong>.</p>
-				<img src="images/home.png" class="img-fluid mx-auto d-block" />
+				<img src="images/home.png" class="img-fluid mx-auto d-block" />	
+				
+			
+					
 			</div>
 		</div>
 		
